[package]
name = "clia-influxdb2-derive"
description = "Proc derive macro for Influxdb (clia-mod)"
authors = ["Armin Primadi <aprimadi@gmail.com>", "ex0dus-0x <ex0dus@codemuch.tech>", "clia <helloclia@gmail.com>"]
license = "MIT"
version = "0.1.1"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.1"
proc-macro2 = "=1.0.24"
quote = "1.0"
regex = "1.5.4"
syn = { version = "1.0.58", features = ["full", "extra-traits"] }

[dev-dependencies]
influxdb2-structmap = { path = "../influxdb2-structmap" }
influxdb2 = { path="../", package = "clia-influxdb2" }
# crates.io dependencies
chrono = "0.4"
num-traits = "0.2"
trybuild = "1.0"
